Resizing Nodes has offset when using hiDPI display #63040

Closed
opened 2019-03-28 09:26:56 +01:00 by William Reynish · 5 comments

System Information
Operating system: macOS Mojave 10.14.3 (18D109)
Graphics card: AMD Radeon R9 M395X 4096 MB

Blender Version
Broken: 2.80 beta, 02ff600620 master, 2019-03-28
Worked: 2.79 release

Short description of error
When using 2.8 on a hiDPI monitor, or if you set the Resolution Scale to >1, resizing nodes doesn't work correctly.

Easiest way to explain is to post a screen recording:

2.79 on the left, 2.80 beta on the right.

node_resize_bug.mov

Exact steps for others to reproduce the error

  • Make sure you are on a hiDPI (retina) display, or set Resolution Scale to, say, 2.
  • Resize any node.
**System Information** Operating system: macOS Mojave 10.14.3 (18D109) Graphics card: AMD Radeon R9 M395X 4096 MB **Blender Version** Broken: 2.80 beta, 02ff600620 master, 2019-03-28 Worked: 2.79 release **Short description of error** When using 2.8 on a hiDPI monitor, or if you set the Resolution Scale to >1, resizing nodes doesn't work correctly. Easiest way to explain is to post a screen recording: 2.79 on the left, 2.80 beta on the right. [node_resize_bug.mov](https://archive.blender.org/developer/F6894450/node_resize_bug.mov) **Exact steps for others to reproduce the error** - Make sure you are on a hiDPI (retina) display, or set Resolution Scale to, say, 2. - Resize any node.

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

checking...

checking...

This issue was referenced by fe9c9a313f

This issue was referenced by fe9c9a313fbb78ba9987c9978d52e22bc33b30f2
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63040
No description provided.