Fix T63040: Resizing node has offset

This broke in rB6500b31728d870506207d9d70837b171cbef32ea.

Reviewers: brecht

Differential Revision: https://developer.blender.org/D4607